Wrote blackbox and whitebox testing classes, more depth can be added